Add Notebook 2 Data Cleaning

--- a/jupyter_notebooks/Notebook_1_DataCollection.ipynb
+++ b/jupyter_notebooks/Notebook_1_DataCollection.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -387,8 +387,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "House Prices Dataset"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -593,7 +600,7 @@
               "[5 rows x 24 columns]"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -607,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -653,8 +660,150 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Convert categorical variables to numerical"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array(['No', 'Gd', 'Mn', 'Av', 'None'], dtype=object)"
+            ]
+          },
+          "execution_count": 40,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "df_houseprices['BsmtExposure'].unique()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "     BsmtExposure  BsmtExposure_num\n",
+            "0              No                 3\n",
+            "1              Gd                 1\n",
+            "2              Mn                 2\n",
+            "3              No                 3\n",
+            "4              Av                 0\n",
+            "...           ...               ...\n",
+            "1455           No                 3\n",
+            "1456           No                 3\n",
+            "1457           No                 3\n",
+            "1458           Mn                 2\n",
+            "1459           No                 3\n",
+            "\n",
+            "[1460 rows x 2 columns]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Dictionary to map categories to numbers\n",
+        "bsmt_exposure_map = {\n",
+        "    'No': 0,\n",
+        "    'Mn': 1,\n",
+        "    'Av': 2,\n",
+        "    'Gd': 3,\n",
+        "    'None': 4\n",
+        "}\n",
+        "\n",
+        "# Map the existing 'BsmtExposure' values to create 'BsmtExposure_num'\n",
+        "df_houseprices['BsmtExposure_num'] = df_houseprices['BsmtExposure'].map(bsmt_exposure_map)\n",
+        "\n",
+        "# If you want to convert 'BsmtExposure_num' to categorical codes\n",
+        "df_houseprices['BsmtExposure_num'] = pd.Categorical(df_houseprices['BsmtExposure']).codes\n",
+        "\n",
+        "# Now you can check the result\n",
+        "print(df_houseprices[['BsmtExposure', 'BsmtExposure_num']])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "dtype('int8')"
+            ]
+          },
+          "execution_count": 46,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_houseprices['BsmtExposure_num'].dtype"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<bound method Series.info of 0       3\n",
+              "1       1\n",
+              "2       2\n",
+              "3       3\n",
+              "4       0\n",
+              "       ..\n",
+              "1455    3\n",
+              "1456    3\n",
+              "1457    3\n",
+              "1458    2\n",
+              "1459    3\n",
+              "Name: BsmtExposure_num, Length: 1460, dtype: int8>"
+            ]
+          },
+          "execution_count": 47,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_houseprices['BsmtExposure_num'].info"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ['BsmtFinType1'], ['GarageFinish'], ['KitchenQual'] ,"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Inherited Houses Dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -831,7 +980,7 @@
               "[4 rows x 23 columns]"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
