--- a/jupyter_notebooks/Notebook_2_DataCleaning.ipynb
+++ b/jupyter_notebooks/Notebook_2_DataCleaning.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **(ADD THE NOTEBOOK NAME HERE)**"
+        "# **2. Data Cleaning**"
       ]
     },
     {
@@ -17,19 +17,16 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write your notebook objective here, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Clean the raw dataset imported from Kaggle\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
+        "* Identify missing data, duplicated data, erroneously formatted data\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "* Create outputs/datasets/collection/HousePrices_clean\n",
+        "* Create outputs/datasets/collection/InheritedHouses_clean \n"
       ]
     },
     {
@@ -54,36 +51,17 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* We are assuming you will store the notebooks in a subfolder, therefore when running the notebook in the editor, you will need to change the working directory"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aOGIGS-uz3i2"
-      },
-      "source": [
-        "We need to change the working directory from its current folder to its parent folder\n",
-        "* We access the current directory with os.getcwd()"
+        "* Change the working directory to ensure files copied and saved to correct locations."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Current Directory: /workspace/milestone-project-housing-issues/jupyter_notebooks\n",
-            "New Current Directory: /workspace/milestone-project-housing-issues\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import os\n",
         "\n",
@@ -105,7 +83,7 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1"
+        "# Missing Data"
       ]
     },
     {
@@ -120,13 +98,7 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "import pandas as pd\n",
-        "df = (pd.read_csv(\"outputs/datasets/collection/TelcoCustomerChurn.csv\")\n",
-        "    .drop(['customerID'], axis=1)\n",
-        "    )\n",
-        "df.head(3)\n"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -247,7 +219,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.18"
+      "version": "3.8.12"
     },
     "orig_nbformat": 2
   },
