Add FeatureEngineering notebook

--- a/jupyter_notebooks/Notebook_3_Correlation_PPS_Analysis.ipynb
+++ b/jupyter_notebooks/Notebook_3_Correlation_PPS_Analysis.ipynb
@@ -1229,6 +1229,45 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# Save as new Clean dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[Errno 17] File exists: 'outputs/datasets/cleaned'\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Save as file in collections folder\n",
+        "\n",
+        "import os\n",
+        "try:\n",
+        "  os.makedirs(name='outputs/datasets/cleaned')\n",
+        "except Exception as e:\n",
+        "  print(e)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_houseprices.to_csv(\"outputs/datasets/cleaned/HousePricesClean.csv\", index=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Conclusions and Next Steps"
       ]
     },
