--- a/jupyter_notebooks/Notebook_3_Correlation_PPS_Analysis.ipynb
+++ b/jupyter_notebooks/Notebook_3_Correlation_PPS_Analysis.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **Correlation and PPS Notebook**"
+        "# **3. Correlation and PPS Notebook**"
       ]
     },
     {
