Add tidied Notebook 1-4, move recoding cat->num from notebook 2 to 3

--- a/jupyter_notebooks/Notebook_1_DataCollection.ipynb
+++ b/jupyter_notebooks/Notebook_1_DataCollection.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
@@ -306,16 +306,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Downloading housing-prices-data.zip to inputs/datasets/raw\n",
-            "  0%|                                               | 0.00/49.6k [00:00<?, ?B/s]\n",
-            "100%|██████████████████████████████████████| 49.6k/49.6k [00:00<00:00, 2.87MB/s]\n"
+            "Traceback (most recent call last):\n",
+            "  File \"/workspace/.pip-modules/bin/kaggle\", line 5, in <module>\n",
+            "    from kaggle.cli import main\n",
+            "  File \"/workspace/.pip-modules/lib/python3.8/site-packages/kaggle/__init__.py\", line 23, in <module>\n",
+            "    api.authenticate()\n",
+            "  File \"/workspace/.pip-modules/lib/python3.8/site-packages/kaggle/api/kaggle_api_extended.py\", line 164, in authenticate\n",
+            "    raise IOError('Could not find {}. Make sure it\\'s located in'\n",
+            "OSError: Could not find kaggle.json. Make sure it's located in /workspace/milestone-project-housing-issues. Or use the environment method.\n"
           ]
         }
       ],
@@ -328,17 +333,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Archive:  inputs/datasets/raw/housing-prices-data.zip\n",
-            "  inflating: inputs/datasets/raw/house-metadata.txt  \n",
-            "  inflating: inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/house_prices_records.csv  \n",
-            "  inflating: inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/inherited_houses.csv  \n"
+            "unzip:  cannot find or open inputs/datasets/raw/*.zip, inputs/datasets/raw/*.zip.zip or inputs/datasets/raw/*.zip.ZIP.\n",
+            "\n",
+            "No zipfiles found.\n"
           ]
         }
       ],
@@ -365,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -390,12 +394,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "House Prices Dataset"
+        "*House Prices Dataset*"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -600,7 +604,7 @@
               "[5 rows x 24 columns]"
             ]
           },
-          "execution_count": 38,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -614,7 +618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -663,147 +667,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Convert categorical variables to numerical"
+        "*Inherited Houses Dataset*"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array(['No', 'Gd', 'Mn', 'Av', 'None'], dtype=object)"
-            ]
-          },
-          "execution_count": 40,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "import pandas as pd\n",
-        "\n",
-        "df_houseprices['BsmtExposure'].unique()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 43,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "     BsmtExposure  BsmtExposure_num\n",
-            "0              No                 3\n",
-            "1              Gd                 1\n",
-            "2              Mn                 2\n",
-            "3              No                 3\n",
-            "4              Av                 0\n",
-            "...           ...               ...\n",
-            "1455           No                 3\n",
-            "1456           No                 3\n",
-            "1457           No                 3\n",
-            "1458           Mn                 2\n",
-            "1459           No                 3\n",
-            "\n",
-            "[1460 rows x 2 columns]\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Dictionary to map categories to numbers\n",
-        "bsmt_exposure_map = {\n",
-        "    'No': 0,\n",
-        "    'Mn': 1,\n",
-        "    'Av': 2,\n",
-        "    'Gd': 3,\n",
-        "    'None': 4\n",
-        "}\n",
-        "\n",
-        "# Map the existing 'BsmtExposure' values to create 'BsmtExposure_num'\n",
-        "df_houseprices['BsmtExposure_num'] = df_houseprices['BsmtExposure'].map(bsmt_exposure_map)\n",
-        "\n",
-        "# If you want to convert 'BsmtExposure_num' to categorical codes\n",
-        "df_houseprices['BsmtExposure_num'] = pd.Categorical(df_houseprices['BsmtExposure']).codes\n",
-        "\n",
-        "# Now you can check the result\n",
-        "print(df_houseprices[['BsmtExposure', 'BsmtExposure_num']])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 46,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "dtype('int8')"
-            ]
-          },
-          "execution_count": 46,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "df_houseprices['BsmtExposure_num'].dtype"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 47,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<bound method Series.info of 0       3\n",
-              "1       1\n",
-              "2       2\n",
-              "3       3\n",
-              "4       0\n",
-              "       ..\n",
-              "1455    3\n",
-              "1456    3\n",
-              "1457    3\n",
-              "1458    2\n",
-              "1459    3\n",
-              "Name: BsmtExposure_num, Length: 1460, dtype: int8>"
-            ]
-          },
-          "execution_count": 47,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "df_houseprices['BsmtExposure_num'].info"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# ['BsmtFinType1'], ['GarageFinish'], ['KitchenQual'] ,"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Inherited Houses Dataset"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -980,7 +849,7 @@
               "[4 rows x 23 columns]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -993,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -1055,7 +924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 12,
       "metadata": {
         "id": "aKlnIozA4eQO",
         "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
@@ -1081,13 +950,6 @@
         "df_houseprices.to_csv(f\"outputs/datasets/collection/HousePrices.csv\",index=False)\n",
         "df_inherited_houses.to_csv(f\"outputs/datasets/collection/InheritedHouses.csv\",index=False)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
