Add cluster analysis

--- a/jupyter_notebooks/Notebook_1_DataCollection.ipynb
+++ b/jupyter_notebooks/Notebook_1_DataCollection.ipynb
@@ -286,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -305,14 +305,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Traceback (most recent call last):\n",
-            "  File \"/workspace/.pip-modules/bin/kaggle\", line 5, in <module>\n",
-            "    from kaggle.cli import main\n",
-            "  File \"/workspace/.pip-modules/lib/python3.8/site-packages/kaggle/__init__.py\", line 23, in <module>\n",
-            "    api.authenticate()\n",
-            "  File \"/workspace/.pip-modules/lib/python3.8/site-packages/kaggle/api/kaggle_api_extended.py\", line 164, in authenticate\n",
-            "    raise IOError('Could not find {}. Make sure it\\'s located in'\n",
-            "OSError: Could not find kaggle.json. Make sure it's located in /workspace/milestone-project-housing-issues. Or use the environment method.\n"
+            "housing-prices-data.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
           ]
         }
       ],
@@ -332,9 +325,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "unzip:  cannot find or open inputs/datasets/raw/*.zip, inputs/datasets/raw/*.zip.zip or inputs/datasets/raw/*.zip.ZIP.\n",
-            "\n",
-            "No zipfiles found.\n"
+            "Archive:  inputs/datasets/raw/housing-prices-data.zip\n",
+            "replace inputs/datasets/raw/house-metadata.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: ^C\n"
           ]
         }
       ],
@@ -951,11 +943,9 @@
       "provenance": [],
       "toc_visible": true
     },
-    "interpreter": {
-      "hash": "8b8334dab9339717f727a1deaf837b322d7a41c20d15cc86be99a8e69ceec8ce"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.12 64-bit ('3.8.12': pyenv)",
+      "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
