--- a/jupyter_notebooks/Notebook_3_Correlation_PPS_Analysis.ipynb
+++ b/jupyter_notebooks/Notebook_3_Correlation_PPS_Analysis.ipynb
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -332,7 +332,7 @@
               "[5 rows x 21 columns]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -386,7 +386,7 @@
               "Index: []"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -412,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -463,7 +463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -471,8 +471,8 @@
           "output_type": "stream",
           "text": [
             "BsmtExposure: ['No' 'Gd' 'Mn' 'Av' 'None']\n",
-            "BsmtFinType1: ['GLQ' 'ALQ' 'Unf' 'Rec' nan 'BLQ' 'None' 'LwQ']\n",
-            "GarageFinish: ['RFn' 'Unf' nan 'Fin' 'None']\n",
+            "BsmtFinType1: ['GLQ' 'ALQ' 'Unf' 'Rec' 'BLQ' 'None' 'LwQ']\n",
+            "GarageFinish: ['RFn' 'Unf' 'Fin' 'None']\n",
             "KitchenQual: ['Gd' 'TA' 'Ex' 'Fa']\n"
           ]
         }
@@ -484,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -689,7 +689,7 @@
               "[5 rows x 21 columns]"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -712,7 +712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -750,22 +750,8 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Section 2 content"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "---"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -803,7 +789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -827,52 +813,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 1460 entries, 0 to 1459\n",
-            "Data columns (total 22 columns):\n",
-            " #   Column         Non-Null Count  Dtype   \n",
-            "---  ------         --------------  -----   \n",
-            " 0   1stFlrSF       1460 non-null   int64   \n",
-            " 1   BedroomAbvGr   1460 non-null   int64   \n",
-            " 2   BsmtExposure   1460 non-null   int64   \n",
-            " 3   BsmtFinType1   1460 non-null   int64   \n",
-            " 4   GarageFinish   1460 non-null   int64   \n",
-            " 5   GarageYrBlt    1460 non-null   int64   \n",
-            " 6   GrLivArea      1460 non-null   int64   \n",
-            " 7   KitchenQual    1460 non-null   int64   \n",
-            " 8   LotArea        1460 non-null   int64   \n",
-            " 9   LotFrontage    1460 non-null   int64   \n",
-            " 10  OverallCond    1460 non-null   int64   \n",
-            " 11  OverallQual    1460 non-null   int64   \n",
-            " 12  TotalBsmtSF    1460 non-null   int64   \n",
-            " 13  YearBuilt      1460 non-null   int64   \n",
-            " 14  SalePrice      1460 non-null   int64   \n",
-            " 15  Has2ndFloor    1460 non-null   int64   \n",
-            " 16  HasMasVnr      1460 non-null   int64   \n",
-            " 17  HasOpenPorch   1460 non-null   int64   \n",
-            " 18  HasGarage      1460 non-null   int64   \n",
-            " 19  HasFinBsmt     1460 non-null   int64   \n",
-            " 20  ModsMade       1460 non-null   int64   \n",
-            " 21  SalePriceBand  1460 non-null   category\n",
-            "dtypes: category(1), int64(21)\n",
-            "memory usage: 241.2 KB\n"
-          ]
-        }
-      ],
-      "source": [
-        "df_houseprices.info()\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -900,7 +841,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1460 entries, 0 to 1459\n",
+            "Data columns (total 22 columns):\n",
+            " #   Column         Non-Null Count  Dtype\n",
+            "---  ------         --------------  -----\n",
+            " 0   1stFlrSF       1460 non-null   int64\n",
+            " 1   BedroomAbvGr   1460 non-null   int64\n",
+            " 2   BsmtExposure   1460 non-null   int64\n",
+            " 3   BsmtFinType1   1460 non-null   int64\n",
+            " 4   GarageFinish   1460 non-null   int64\n",
+            " 5   GarageYrBlt    1460 non-null   int64\n",
+            " 6   GrLivArea      1460 non-null   int64\n",
+            " 7   KitchenQual    1460 non-null   int64\n",
+            " 8   LotArea        1460 non-null   int64\n",
+            " 9   LotFrontage    1460 non-null   int64\n",
+            " 10  OverallCond    1460 non-null   int64\n",
+            " 11  OverallQual    1460 non-null   int64\n",
+            " 12  TotalBsmtSF    1460 non-null   int64\n",
+            " 13  YearBuilt      1460 non-null   int64\n",
+            " 14  SalePrice      1460 non-null   int64\n",
+            " 15  Has2ndFloor    1460 non-null   int64\n",
+            " 16  HasMasVnr      1460 non-null   int64\n",
+            " 17  HasOpenPorch   1460 non-null   int64\n",
+            " 18  HasGarage      1460 non-null   int64\n",
+            " 19  HasFinBsmt     1460 non-null   int64\n",
+            " 20  ModsMade       1460 non-null   int64\n",
+            " 21  SalePriceBand  1460 non-null   int64\n",
+            "dtypes: int64(22)\n",
+            "memory usage: 251.1 KB\n"
+          ]
+        }
+      ],
+      "source": [
+        "df_houseprices.info()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -919,7 +905,7 @@
               "Name: SalePriceBand, dtype: float64"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -931,7 +917,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -950,7 +936,7 @@
               "Name: SalePriceBand, dtype: float64"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -962,7 +948,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -977,7 +963,7 @@
               " 'YearBuilt'}"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1012,7 +998,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -1027,7 +1013,7 @@
               " 'GarageFinish']"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1039,7 +1025,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1123,7 +1109,7 @@
               "2             2              5  "
             ]
           },
-          "execution_count": 18,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1135,7 +1121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -1165,7 +1151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -1354,7 +1340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -1527,7 +1513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -1550,7 +1536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1584,11 +1570,9 @@
       "provenance": [],
       "toc_visible": true
     },
-    "interpreter": {
-      "hash": "8b8334dab9339717f727a1deaf837b322d7a41c20d15cc86be99a8e69ceec8ce"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.12 64-bit ('3.8.12': pyenv)",
+      "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
