Add dashboard pages in app_pages

--- a/jupyter_notebooks/Notebook_6_RegressionAnalysisTransformed.ipynb
+++ b/jupyter_notebooks/Notebook_6_RegressionAnalysisTransformed.ipynb
@@ -18846,6 +18846,32 @@
             "/workspace/.pip-modules/lib/python3.8/site-packages/xgboost/compat.py:93: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
             "  from pandas import MultiIndex, Int64Index\n"
           ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Running GridSearchCV for DecisionTreeClassifier \n",
+            "\n",
+            "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+            "\n",
+            "Running GridSearchCV for RandomForestClassifier \n",
+            "\n",
+            "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+            "\n",
+            "Running GridSearchCV for GradientBoostingClassifier \n",
+            "\n",
+            "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+            "\n",
+            "Running GridSearchCV for ExtraTreesClassifier \n",
+            "\n",
+            "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+            "\n",
+            "Running GridSearchCV for AdaBoostClassifier \n",
+            "\n",
+            "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n"
+          ]
         }
       ],
       "source": [
@@ -18855,7 +18881,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 417,
+      "execution_count": 489,
       "metadata": {},
       "outputs": [
         {
@@ -18958,7 +18984,7 @@
               "1      DecisionTreeRegressor  0.188725     0.3606  0.544712  0.135678"
             ]
           },
-          "execution_count": 417,
+          "execution_count": 489,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -18977,7 +19003,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 418,
+      "execution_count": 490,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -18998,7 +19024,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 419,
+      "execution_count": 491,
       "metadata": {},
       "outputs": [
         {
@@ -19019,7 +19045,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 420,
+      "execution_count": 492,
       "metadata": {},
       "outputs": [
         {
@@ -19836,7 +19862,7 @@
               "15                        5                 300  "
             ]
           },
-          "execution_count": 420,
+          "execution_count": 492,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -19855,7 +19881,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 421,
+      "execution_count": 493,
       "metadata": {},
       "outputs": [
         {
@@ -19864,7 +19890,7 @@
               "'ExtraTreesRegressor'"
             ]
           },
-          "execution_count": 421,
+          "execution_count": 493,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -19876,7 +19902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 422,
+      "execution_count": 494,
       "metadata": {},
       "outputs": [
         {
@@ -19889,7 +19915,7 @@
               " 'model__n_estimators': 300}"
             ]
           },
-          "execution_count": 422,
+          "execution_count": 494,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -19901,7 +19927,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 423,
+      "execution_count": 495,
       "metadata": {},
       "outputs": [
         {
@@ -19933,7 +19959,7 @@
               "                                     n_estimators=300, random_state=0))])"
             ]
           },
-          "execution_count": 423,
+          "execution_count": 495,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -19952,7 +19978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 424,
+      "execution_count": 496,
       "metadata": {},
       "outputs": [
         {
@@ -20016,7 +20042,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 425,
+      "execution_count": 497,
       "metadata": {},
       "outputs": [
         {
@@ -20025,7 +20051,7 @@
               "[-inf, 129975.0, 163000.0, 214000.0, inf]"
             ]
           },
-          "execution_count": 425,
+          "execution_count": 497,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -20036,7 +20062,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 426,
+      "execution_count": 498,
       "metadata": {},
       "outputs": [
         {
@@ -20048,7 +20074,7 @@
               " '214,000 and over']"
             ]
           },
-          "execution_count": 426,
+          "execution_count": 498,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -20060,7 +20086,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 427,
+      "execution_count": 499,
       "metadata": {},
       "outputs": [
         {
@@ -20101,7 +20127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 428,
+      "execution_count": 500,
       "metadata": {},
       "outputs": [
         {
@@ -20178,7 +20204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 429,
+      "execution_count": 501,
       "metadata": {},
       "outputs": [
         {
@@ -20211,7 +20237,7 @@
               "                                     n_estimators=300, random_state=0))])"
             ]
           },
-          "execution_count": 429,
+          "execution_count": 501,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -20236,7 +20262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 430,
+      "execution_count": 502,
       "metadata": {},
       "outputs": [
         {
@@ -20269,7 +20295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 431,
+      "execution_count": 503,
       "metadata": {},
       "outputs": [
         {
@@ -20453,7 +20479,7 @@
               "302       1580.0          1992  "
             ]
           },
-          "execution_count": 431,
+          "execution_count": 503,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -20464,7 +20490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 432,
+      "execution_count": 504,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -20473,7 +20499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 433,
+      "execution_count": 505,
       "metadata": {},
       "outputs": [
         {
@@ -20487,7 +20513,7 @@
               "Name: SalePrice, dtype: int64"
             ]
           },
-          "execution_count": 433,
+          "execution_count": 505,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -20498,7 +20524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 434,
+      "execution_count": 506,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -20514,7 +20540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 435,
+      "execution_count": 507,
       "metadata": {},
       "outputs": [
         {
@@ -20698,7 +20724,7 @@
               "655        624.0          2007  "
             ]
           },
-          "execution_count": 435,
+          "execution_count": 507,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -20709,7 +20735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 436,
+      "execution_count": 508,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -20718,7 +20744,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 437,
+      "execution_count": 509,
       "metadata": {},
       "outputs": [
         {
@@ -20732,7 +20758,7 @@
               "Name: SalePrice, dtype: int64"
             ]
           },
-          "execution_count": 437,
+          "execution_count": 509,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -20743,7 +20769,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 438,
+      "execution_count": 510,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -20759,19 +20785,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 439,
+      "execution_count": 512,
       "metadata": {},
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'pipeline_best' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[439], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpipeline_best\u001b[49m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'pipeline_best' is not defined"
-          ]
+          "data": {
+            "text/plain": [
+              "Pipeline(steps=[('SmartCorrelatedSelection',\n",
+              "                 SmartCorrelatedSelection(method='spearman',\n",
+              "                                          selection_method='variance',\n",
+              "                                          threshold=0.6,\n",
+              "                                          variables=['2ndFlrSF', 'BedroomAbvGr',\n",
+              "                                                     'BsmtExposure',\n",
+              "                                                     'BsmtFinSF1',\n",
+              "                                                     'BsmtFinType1',\n",
+              "                                                     'BsmtUnfSF', 'GarageArea',\n",
+              "                                                     'GarageFinish',\n",
+              "                                                     'GrLivArea', 'KitchenQual',\n",
+              "                                                     'LotArea', 'LotFrontage',\n",
+              "                                                     'MasVnrArea',\n",
+              "                                                     'OpenPorchSF',\n",
+              "                                                     'OverallCond',\n",
+              "                                                     'OverallQual',\n",
+              "                                                     'TotalBsmtSF',\n",
+              "                                                     'YearRemodAdd'])),\n",
+              "                ('feat_scaling', StandardScaler()),\n",
+              "                ('feat_selection',\n",
+              "                 SelectFromModel(estimator=ExtraTreesRegressor(random_state=0))),\n",
+              "                ('model',\n",
+              "                 ExtraTreesRegressor(max_features='sqrt', min_samples_split=5,\n",
+              "                                     n_estimators=300, random_state=0))])"
+            ]
+          },
+          "execution_count": 512,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
