--- a/jupyter_notebooks/Notebook_8_BestModel.ipynb
+++ b/jupyter_notebooks/Notebook_8_BestModel.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **(ADD THE NOTEBOOK NAME HERE)**"
+        "# **Notebook 8: Best model for Predicting House Prices in Ames, Iowa**"
       ]
     },
     {
@@ -51,23 +51,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* We are assuming you will store the notebooks in a subfolder, therefore when running the notebook in the editor, you will need to change the working directory"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aOGIGS-uz3i2"
-      },
-      "source": [
-        "We need to change the working directory from its current folder to its parent folder\n",
-        "* We access the current directory with os.getcwd()"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -77,54 +60,17 @@
       "outputs": [],
       "source": [
         "import os\n",
+        "\n",
+        "# Get the current directory\n",
         "current_dir = os.getcwd()\n",
-        "current_dir"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9MWW8E7lz3i7"
-      },
-      "source": [
-        "We want to make the parent of the current directory the new current directory\n",
-        "* os.path.dirname() gets the parent directory\n",
-        "* os.chir() defines the new current directory"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TwHsQRWjz3i9",
-        "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
-      },
-      "outputs": [],
-      "source": [
-        "os.chdir(os.path.dirname(current_dir))\n",
-        "print(\"You set a new current directory\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "M_xPk_Ijz3i-"
-      },
-      "source": [
-        "Confirm the new current directory"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "vz3S-_kjz3jA",
-        "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
-      },
-      "outputs": [],
-      "source": [
+        "print(\"Current Directory:\", current_dir)\n",
+        "\n",
+        "# Change the directory to the new path\n",
+        "os.chdir('/workspace/milestone-project-housing-issues')\n",
+        "\n",
+        "# Get the updated current directory\n",
         "current_dir = os.getcwd()\n",
-        "current_dir"
+        "print(\"New Current Directory:\", current_dir)"
       ]
     },
     {
@@ -133,14 +79,7 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Section 1 content"
+        "# Load dataset"
       ]
     },
     {
