Add skeleton ML page to dashboard

--- a/jupyter_notebooks/Notebook_5_RegressionAnalysisOriginal.ipynb
+++ b/jupyter_notebooks/Notebook_5_RegressionAnalysisOriginal.ipynb
@@ -11898,7 +11898,7 @@
       ],
       "source": [
         "df_feature_importance.plot(kind='bar',x='Feature',y='Importance')\n",
-        "plt.savefig(f'{file_path}/features_importance.png', bbox_inches='tight')"
+        "plt.savefig(f'{file_path}/feature_importance.png', bbox_inches='tight')"
       ]
     },
     {
