Add tidied notebooks 1-4

--- a/jupyter_notebooks/Notebook_1_DataCollection.ipynb
+++ b/jupyter_notebooks/Notebook_1_DataCollection.ipynb
@@ -27,7 +27,7 @@
         "\n",
         "## Outputs\n",
         "\n",
-        "* Dataset (outputs/datasets/collection/housing_prices_data.csv)\n",
+        "* Dataset (inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/house_prices_records.csv)\n",
         "\n",
         "## Additional Comments\n",
         "\n",
@@ -293,8 +293,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Getting dataset from Kaggle.\n",
-        "find /workspace -name kaggle.json"
+        "Getting dataset from Kaggle."
       ]
     },
     {
@@ -303,7 +302,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Set Kaggle config:\n",
         "import os\n",
         "os.environ['KAGGLE_CONFIG_DIR'] = os.getcwd()\n",
         "! chmod 600 kaggle.json"
