Add tidied notebook and app pages

--- a/jupyter_notebooks/Notebook_3_Correlation_PPS_Analysis.ipynb
+++ b/jupyter_notebooks/Notebook_3_Correlation_PPS_Analysis.ipynb
@@ -1750,8 +1750,7 @@
         }
       ],
       "source": [
-        "# Save as file in collections folder\n",
-        "\n",
+        "# Save as file in cleaned folder\n",
         "import os\n",
         "try:\n",
         "  os.makedirs(name='outputs/datasets/cleaned')\n",
@@ -1805,7 +1804,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Scatterplots and distribution of key variables"
+        "### Saving scatter plots and distribution of key variables"
       ]
     },
     {
